# schoolapi

./: .gitignore  CHANGES.md  CLAUDE.md  LICENSE  README.md  cli.py  gui.py  pyproject.toml  run.py  switch-model.bat  switch-model.ps1  switch-model.sh
claude-code-proxy/: .env.example
claude-code-proxy/src/models/: claude.py
docs/superpowers/plans/: 2026-05-11-genai2api-model-fallback.md
proxies/genai2api/: CHANGELOG.md  app.py  config.py  context_compress.py  errors.py  genai_types.py  main.py  pyproject.toml
proxies/genai2api/api/: health.py  messages.py  models.py
proxies/genai2api/auth/: cas_login.py  token_manager.py
proxies/genai2api/provider/: anthropic.py  genai.py
proxies/genai2api/tests/: test_curl.sh
proxies/genai2api/tools/: parsing.py
tui/: __init__.py  app.py  config.py  models.py  proxy.py  token_utils.py
tui/screens/: profile_form.py  token_input.py
tui/styles/: app.tcss
tui/widgets/: model_select.py  profile_detail.py  profile_list.py  proxy_status.py
