[project]
name = "genai-stack"
version = "6.0.0"
description = "GenAI Stack TUI - 统一控制面板，管理多种 AI 后端代理"
requires-python = ">=3.11"
dependencies = [
    "textual>=2.0.0",
    "requests>=2.32.0",
]

[project.scripts]
genai-tui = "tui.app:main"
genai-stack-cli = "cli:main"

[dependency-groups]
dev = []
