[project]
name = "genai-stack"
version = "7.0.0"
description = "GenAI Stack - 多模式 AI 后端代理管理 (TUI + GUI + CLI)"
requires-python = ">=3.11"
dependencies = [
    "textual>=2.0.0",
    "requests>=2.32.0",
]

[project.scripts]
genai-tui = "tui.app:main"
genai-stack-cli = "cli:main"
genai-stack-gui = "gui:main"

[dependency-groups]
dev = []
